--- a/flex-header/index.html
+++ b/flex-header/index.html
@@ -15,7 +15,7 @@
         <li><a href="#">link-dos</a></li>
         <li><a href="#">link-tres</a></li>
       </ul>
-      <button class="notifications">1 notificación nueva</button>
+      <div class="aviso">!</div><button class="notifications">1 notificación nueva</button>
       <div class="profile-image"></div>
     </div>
   </body>
