--- a/flex-layout-2/index.html
+++ b/flex-layout-2/index.html
@@ -14,7 +14,7 @@
         <nav>
           <ul>
             <li><a href="#">⭐ - link uno</a></li>
-            <li><a href="#">🦸🏽‍♂️ - link dos</a></li>
+            <li><a href="#">🦸🏽‍♂️ - link dos</a space-between;></li>
             <li><a href="#">🖌️ - link tres</a></li>
             <li><a href="#">👌🏽 - link cuatro</a></li>
           </ul>
