--- a/flex-modal/index.html
+++ b/flex-modal/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="modal">
-      <div class="icon">!</div>
+      <div class="icon"><h1>!</h1></div>
       <div class="header">Estas seguro que quieres hacer esto?</div>
       <button class="close-button">✖</button>
       <div class="text">
@@ -25,3 +25,6 @@
     </div>
   </body>
 </html>
+
+
+
